--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "data-bot-api",
+  "name": "my-scraper",
   "version": "1.0.0",
-  "description": "Puppeteer Scraper API for Render",
+  "description": "A web scraper for extracting business information",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "puppeteer-core": "^24.16.2",
-    "chrome-aws-lambda": "^20.2.1"
+    "express": "^4.17.1",
+    "puppeteer-core": "^20.1.2"
   },
-  "keywords": ["scraper", "puppeteer", "api", "render"],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+  "engines": {
+    "node": "16.x"
+  },
+  "license": "ISC"
 }
