--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
-  "name": "my-scraper",
+  "name": "my-scraper-api",
   "version": "1.0.0",
-  "description": "A web scraper for extracting business information",
+  "description": "Puppeteer scraper API with Express",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "puppeteer-core": "^20.1.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "puppeteer": "^24.16.2"
   },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+  "keywords": [
+    "scraper",
+    "puppeteer",
+    "express",
+    "api"
+  ],
   "engines": {
-    "node": "16.x"
+    "node": ">=18.x"
   },
+  "author": "",
   "license": "ISC"
 }
