--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node server.js",
     "start:prod": "node server.js",
+    "start:render": "node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,7 +26,7 @@
     "api"
   ],
   "engines": {
-    "node": ">=18.x"
+    "node": ">=18.x <=24.x"
   },
   "author": "",
   "license": "ISC"
