--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,11 @@
 services:
-     - type: web
-       name: my-scraper-api
-       env: node
-       plan: free
-       buildCommand: npm install
-       startCommand: npm run start:render
-       envVars:
-         - key: NODE_VERSION
-           value: 24
-         - key: PUPPETEER_EXECUTABLE_PATH
-           value: /usr/bin/chromium-browser
+  - type: web
+    name: my-scraper-api
+    env: docker
+    plan: free
+    dockerfilePath: Dockerfile
+    envVars:
+      - key: PUPPETEER_EXECUTABLE_PATH
+        value: /usr/bin/chromium
+      - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
+        value: true
