--- a/package.json
+++ b/package.json
@@ -1,33 +1,16 @@
 {
-  "name": "my-scraper-api",
+  "name": "web-scraper",
   "version": "1.0.0",
-  "description": "Puppeteer scraper API with Express",
+  "description": "Web scraper for business data",
   "main": "server.js",
-  "type": "commonjs",
   "scripts": {
-    "start": "node server.js",
-    "start:prod": "node server.js",
-    "start:render": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "puppeteer": "^24.16.2"
+    "puppeteer": "^22.10.0"
   },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
-  },
-  "keywords": [
-    "scraper",
-    "puppeteer",
-    "express",
-    "api"
-  ],
   "engines": {
-    "node": ">=18.x <=24.x"
-  },
-  "author": "",
-  "license": "ISC"
+    "node": ">=18.x"
+  }
 }
