--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^22.10.0"
+    "puppeteer": "^22.10.0",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": ">=18.x"
