--- a/package.json
+++ b/package.json
@@ -1,17 +1,33 @@
-  {
-    "name": "web-scraper",
-    "version": "1.0.0",
-    "description": "Web scraper for business data",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js"
-    },
-    "dependencies": {
-      "express": "^4.18.2",
-      "puppeteer": "^22.10.0",
-      "cors": "^2.8.5"
-    },
-    "engines": {
-      "node": ">=18.x"
-    }
-  }
+{
+  "name": "my-scraper-api",
+  "version": "1.0.0",
+  "description": "Puppeteer scraper API with Express",
+  "main": "server.js",
+  "type": "commonjs",
+  "scripts": {
+    "start": "node server.js",
+    "start:prod": "node server.js",
+    "start:render": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "puppeteer": "^24.16.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+  "keywords": [
+    "scraper",
+    "puppeteer",
+    "express",
+    "api"
+  ],
+  "engines": {
+    "node": ">=18.x <=24.x"
+  },
+  "author": "",
+  "license": "ISC"
+}
